fix: test and icon size on Firefox

--- a/gno.land/pkg/gnoweb/frontend/css/06-blocks.css
+++ b/gno.land/pkg/gnoweb/frontend/css/06-blocks.css
@@ -640,6 +640,7 @@
 	padding: var(--g-space-1) var(--g-space-2);
 	gap: var(--g-space-1-5);
 	cursor: pointer;
+	min-width: max-content;
 
 	&:hover {
 		background-color: var(--s-color-bg-surface-primary-hover);
